Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Interes_Explicitos__c.field-meta.xml
<CustomField>
    <fullName>Interes_Explicitos__c</fullName>
    <label>Interes Explicitos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>