Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Interes_Implicitos__c.field-meta.xml
<CustomField>
    <fullName>Interes_Implicitos__c</fullName>
    <label>Interes Implicitos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>