Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lote</label>
    <referenceTo>Lote__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>