Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Lote_Parqueo__c.field-meta.xml
<CustomField>
    <fullName>Lote_Parqueo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lote Parqueo</label>
    <referenceTo>Lote__c</referenceTo>
    <relationshipLabel>Cotizaciones (Lote Parqueo)</relationshipLabel>
    <relationshipName>Parqueos</relationshipName>
    <type>Lookup</type>
</CustomField>