Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Manzana__c.field-meta.xml
<CustomField>
    <fullName>Manzana__c</fullName>
    <label>Manzana</label>
    <length>5</length>
    <type>Text</type>
</CustomField>