Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Mes_Beneficio__c.field-meta.xml
<CustomField>
    <fullName>Mes_Beneficio__c</fullName>
    <label>Mes Beneficio</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>