Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Monto_Base__c.field-meta.xml
<CustomField>
    <fullName>Monto_Base__c</fullName>
    <label>Monto Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>