Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Monto_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Monto_Descuento__c</fullName>
    <label>Monto Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>