Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Monto_descuento_adicional__c.field-meta.xml
<CustomField>
    <fullName>Monto_descuento_adicional__c</fullName>
    <label>Monto descuento adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>