Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Mora_Dividendo__c.field-meta.xml
<CustomField>
    <fullName>Mora_Dividendo__c</fullName>
    <label>Mora Dividendo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>