Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/No_Rentable__c.field-meta.xml
<CustomField>
    <fullName>No_Rentable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Rentable</label>
    <type>Checkbox</type>
</CustomField>