Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/No_Viable__c.field-meta.xml
<CustomField>
    <fullName>No_Viable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Viable</label>
    <type>Checkbox</type>
</CustomField>