Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/NombrePropietario__c.field-meta.xml
<CustomField>
    <fullName>NombrePropietario__c</fullName>
    <formula>Oportunidad__r.Owner.FirstName &amp; &quot; &quot; &amp; Oportunidad__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Propietario</label>
    <type>Text</type>
</CustomField>