Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Numero_Total_de_Cuotas__c.field-meta.xml
<CustomField>
    <fullName>Numero_Total_de_Cuotas__c</fullName>
    <label>Numero Total de Cuotas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>