Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Otro_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Otro_Descuento__c</fullName>
    <label>Otro Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>