Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Plazo_Cuota_Entrada__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Cuota_Entrada__c</fullName>
    <label>Plazo [Entrada]</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>