Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Plazo_Entrada_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Entrada_Saldo__c</fullName>
    <label>Plazo [Saldo]</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>