Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Porcentaje_Cuota_Entrada__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Cuota_Entrada__c</fullName>
    <label>Porcentaje Cuota Entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>