Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Porcentaje_Cuota_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Cuota_Inicial__c</fullName>
    <label>Porcentaje Cuota Inicial</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>