Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Porcentaje_Descuento_Entrada__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Descuento_Entrada__c</fullName>
    <label>Porcentaje Descuento Entrada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>