Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Precio_Modelo_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Precio_Modelo_Contrato__c</fullName>
    <label>Precio Modelo Contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>