Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Precio_Venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_Venta__c</fullName>
    <label>Precio Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>