Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Precion_Lista_Area_Terreno__c.field-meta.xml
<CustomField>
    <fullName>Precion_Lista_Area_Terreno__c</fullName>
    <label>Precio Lista Area Terreno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>