Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Saldo_Dividendo__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Dividendo__c</fullName>
    <label>Saldo Dividendo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>