Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Tasa_De_Interes_anual__c.field-meta.xml
<CustomField>
    <fullName>Tasa_De_Interes_anual__c</fullName>
    <label>Tasa De Interes anual</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>