Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Taza_Interna_Retorno__c.field-meta.xml
<CustomField>
    <fullName>Taza_Interna_Retorno__c</fullName>
    <label>Tasa Interna Retorno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>