Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Tipo_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Venta__c</fullName>
    <label>Tipo de Venta</label>
    <length>200</length>
    <type>Text</type>
</CustomField>