Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Tipo_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Financiamiento__c</fullName>
    <label>Tipo Financiamiento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>