Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Total_Acab_y_adici__c.field-meta.xml
<CustomField>
    <fullName>Total_Acab_y_adici__c</fullName>
    <formula>Valor_de_acabado__c +  Valor__c +Valor_Art_Varios__c + Valor_Otros_Adicionales_Congelados__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Acabados y Adicionales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>