Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Total_descuento__c.field-meta.xml
<CustomField>
    <fullName>Total_descuento__c</fullName>
    <label>Total descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>