Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Total_Dividendo__c.field-meta.xml
<CustomField>
    <fullName>Total_Dividendo__c</fullName>
    <label>Total Dividendo</label>
    <length>16</length>
    <type>Text</type>
</CustomField>