Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/UsuarioAprobador__c.field-meta.xml
<CustomField>
    <fullName>UsuarioAprobador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Aprobador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>