Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor Adicionales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>