Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor_Art_Varios__c.field-meta.xml
<CustomField>
    <fullName>Valor_Art_Varios__c</fullName>
    <label>Valor Art Varios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>