Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor_Contado__c.field-meta.xml
<CustomField>
    <fullName>Valor_Contado__c</fullName>
    <label>Valor Contado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>