Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor_Cuota_Inicial_Entrada__c.field-meta.xml
<CustomField>
    <fullName>Valor_Cuota_Inicial_Entrada__c</fullName>
    <label>Valor Cuota Inicial [Entrada]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>