Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor_de_acabado__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_acabado__c</fullName>
    <label>Valor Acabados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>