Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor_Garantia__c.field-meta.xml
<CustomField>
    <fullName>Valor_Garantia__c</fullName>
    <label>Valor Garantia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>