Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor_Impuesto__c.field-meta.xml
<CustomField>
    <fullName>Valor_Impuesto__c</fullName>
    <label>Valor Impuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>