Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor_Otros_Adicionales_Congelados__c.field-meta.xml
<CustomField>
    <fullName>Valor_Otros_Adicionales_Congelados__c</fullName>
    <label>Valor Otros Adicionales Congelados</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>