Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor_Promociones__c.field-meta.xml
<CustomField>
    <fullName>Valor_Promociones__c</fullName>
    <label>Valor Promociones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>