Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Valor_Saldo__c</fullName>
    <label>Valor [Saldo]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>