Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor_Terreno__c.field-meta.xml
<CustomField>
    <fullName>Valor_Terreno__c</fullName>
    <label>Valor Terreno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>