Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Valor_villa__c.field-meta.xml
<CustomField>
    <fullName>Valor_villa__c</fullName>
    <label>Valor villa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>