Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/fields/Venta_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Venta_Anterior__c</fullName>
    <label>Venta Anterior</label>
    <length>100</length>
    <type>Text</type>
</CustomField>