Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/validationRules/RG3_Validacion_de_Cantidad_Cuotas.validationRule-meta.xml
<ValidationRule>
    <fullName>RG3_Validacion_de_Cantidad_Cuotas</fullName>
    <active>true</active>
    <description>La cantidad de cuotas de entrada debe de ser menor o igual a las permitido para este proyecto.</description>
    <errorConditionFormula>(ISBLANK($CustomMetadata.Sales_SLA_config__mdt.SG3.Proyecto__c) || CONTAINS( CI_Proyecto__r.Codigo_Proyecto__c , $CustomMetadata.Sales_SLA_config__mdt.SG3.Proyecto__c))

&amp;&amp;

Numero_Total_de_Cuotas__c &gt;  VALUE( $CustomMetadata.Sales_SLA_config__mdt.SG3.Valor_de_Comparacion__c )

&amp;&amp; NOT( Ingresa_Preferencial__c )</errorConditionFormula>
    <errorMessage>La cantidad de cuotas de entrada debe de ser menor o igual a las permitido para este proyecto.</errorMessage>
</ValidationRule>