Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/validationRules/RG4_Validacion_porcentaje_Minimo_Rioja.validationRule-meta.xml
<ValidationRule>
    <fullName>RG4_Validacion_porcentaje_Minimo_Rioja</fullName>
    <active>true</active>
    <description>Validación de porcentaje mínimo por proyecto Rioja</description>
    <errorConditionFormula>(ISBLANK($CustomMetadata.Sales_SLA_config__mdt.SG4.Proyecto__c) || CONTAINS( CI_Proyecto__r.Codigo_Proyecto__c , $CustomMetadata.Sales_SLA_config__mdt.SG4.Proyecto__c))

&amp;&amp;

 Porcentaje_Cuota_Entrada__c*100 &lt;  VALUE( $CustomMetadata.Sales_SLA_config__mdt.SG4.Valor_de_Comparacion__c )

&amp;&amp;

NOT( Ingresa_Preferencial__c )</errorConditionFormula>
    <errorMessage>El porcentaje mínimo de entrada debe de ser mayor o igual al permitido para este proyecto.</errorMessage>
</ValidationRule>