Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/validationRules/RG5_Validacion_Fecha_Reserva.validationRule-meta.xml
<ValidationRule>
    <fullName>RG5_Validacion_Fecha_Reserva</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK($CustomMetadata.Sales_SLA_config__mdt.RG5.Proyecto__c) || CONTAINS( CI_Proyecto__r.Codigo_Proyecto__c , $CustomMetadata.Sales_SLA_config__mdt.RG5.Proyecto__c))

&amp;&amp;

 (Oportunidad__r.Fecha_de_Reserva__c - Fecha_Cuota_Entrada__c)  &lt;  VALUE( $CustomMetadata.Sales_SLA_config__mdt.RG5.Valor_de_Comparacion__c )

&amp;&amp; NOT( Ingresa_Preferencial__c )</errorConditionFormula>
    <errorMessage>El primer pago debe de ser antes de la fecha de reserva</errorMessage>
</ValidationRule>