Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/validationRules/RG7_Validacion_de_Ultima_Fecha_Proye.validationRule-meta.xml
<ValidationRule>
    <fullName>RG7_Validacion_de_Ultima_Fecha_Proye</fullName>
    <active>false</active>
    <description>Valida la fecha de la ultima cuota financiada contra la fecha de entrega de el proyecto.</description>
    <errorConditionFormula>Fecha_de_Ultima_Cuota__c &gt;  Lote__r.CI_Fecha_Limite_Venta__c &amp;&amp;  NOT(Ingresa_Preferencial__c)</errorConditionFormula>
    <errorMessage>No puede ingresar una cuota mayor a la fecha límite de venta de el inmueble</errorMessage>
</ValidationRule>