Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/validationRules/RG8_Validacion_de_Cantidad_Cuotas_Rioja.validationRule-meta.xml
<ValidationRule>
    <fullName>RG8_Validacion_de_Cantidad_Cuotas_Rioja</fullName>
    <active>true</active>
    <description>La cantidad de cuotas de entrada debe de ser menor o igual a las permitido para este proyecto Rioja.</description>
    <errorConditionFormula>(ISBLANK($CustomMetadata.Sales_SLA_config__mdt.SG5.Proyecto__c) || CONTAINS( CI_Proyecto__r.Codigo_Proyecto__c , $CustomMetadata.Sales_SLA_config__mdt.SG5.Proyecto__c))

&amp;&amp;

Numero_Total_de_Cuotas__c &gt; VALUE( $CustomMetadata.Sales_SLA_config__mdt.SG5.Valor_de_Comparacion__c )

&amp;&amp; NOT( Ingresa_Preferencial__c )</errorConditionFormula>
    <errorMessage>La cantidad de cuotas de entrada debe de ser menor o igual a las permitido para este proyecto.</errorMessage>
</ValidationRule>