Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/validationRules/RG9_Validar_Cuotas_Minimo_Reserva_Rioja.validationRule-meta.xml
<ValidationRule>
    <fullName>RG9_Validar_Cuotas_Minimo_Reserva_Rioja</fullName>
    <active>false</active>
    <description>Validación para ver el número de cuotas en las que se debe completar el valor mínimo de reserva</description>
    <errorConditionFormula>(ISBLANK($CustomMetadata.Sales_SLA_config__mdt.RG7.Proyecto__c) || CONTAINS( CI_Proyecto__r.Codigo_Proyecto__c , $CustomMetadata.Sales_SLA_config__mdt.RG7.Proyecto__c))

&amp;&amp;

CI_Cuota_Inicial__c &lt; VALUE( $CustomMetadata.Sales_SLA_config__mdt.RG7.Valor_de_Comparacion__c )

&amp;&amp; NOT( Ingresa_Preferencial__c )</errorConditionFormula>
    <errorMessage>El minimo de reserva no se cumple en las cuotas esperadas</errorMessage>
</ValidationRule>