Inmob-Salesforce/force-app/main/default/objects/Cotizacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Codigo_Venta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>